--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -5,26 +5,30 @@ import List from "../components/List.astro";
 ---
 
 <MainLayout title="Artikler">
-  <HeadingParagraf
-    title="Artikler"
-    text="Vi lægger vægt på, at sexarbejdere skal have de samme rettiheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
-  />
-  <List
-    image="artikel1.webp"
-    descr="Billede af klistermærker"
-    title="D. 20/11/25"
-    text="Den danske lovgivning om sexarbejde og The Red Vans bud på forbedringer"
-  />
-  <List
-    image="artikel2.webp"
-    descr="Billede af to personer på gaden"
-    title="D. 08/10/25"
-    text="Hvordan påvirker sæsonskiftet gadebaseret sexarbejdere?"
-  />
-  <List
-    image="artikel3.webp"
-    descr="Personer fra et foredragspanel"
-    title="D. 26/09/25"
-    text="Skadesreduktion: Hvad betyder det, og hvordan arbejder The Red Van med det?"
-  />
+  <div class="bg-greywhite px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
+    <div class="pb-3xl md:pb-6xl">
+      <HeadingParagraf
+        title="Artikler"
+        text="Vi lægger vægt på, at sexarbejdere skal have de samme rettiheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
+      />
+    </div>
+    <List
+      image="artikel1.webp"
+      descr="Billede af klistermærker"
+      title="D. 20/11/25"
+      text="Den danske lovgivning om sexarbejde og The Red Vans bud på forbedringer"
+    />
+    <List
+      image="artikel2.webp"
+      descr="Billede af to personer på gaden"
+      title="D. 08/10/25"
+      text="Hvordan påvirker sæsonskiftet gadebaseret sexarbejdere?"
+    />
+    <List
+      image="artikel3.webp"
+      descr="Personer fra et foredragspanel"
+      title="D. 26/09/25"
+      text="Skadesreduktion: Hvad betyder det, og hvordan arbejder The Red Van med det?"
+    />
+  </div>
 </MainLayout>
