--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -27,10 +27,10 @@ import Text from "../components/Text.astro";
     <Heading
       htmlheading="h2"
       size="large"
-      stylingclasses="uppercase text-dark pt-3xl pb-2xl md:pb-lg"
+      stylingclasses="uppercase text-dark pt-4xl md:pb-lg"
       >Sekretariatet</Heading
     >
-    <div class="grid md:grid-cols-3 gap-gutter">
+    <div class="grid md:grid-cols-4 gap-gutter">
       <Card
         image="om-os-jelena.webp"
         descr="Billede af Jelena"
@@ -82,7 +82,7 @@ import Text from "../components/Text.astro";
         size="medium"
         stylingclasses="uppercase text-dark pt-3xl pb-xl">Ledelsen</Heading
       >
-      <div class="grid md:grid-cols-4">
+      <div class="grid md:grid-cols-4 md:gap-gutter">
         <Card
           title="Forperson"
           undertitle="Milena Bascuñan"
@@ -99,40 +99,40 @@ import Text from "../components/Text.astro";
           text="Økonomi- og administrationschef i Fødevarebanken, med solid erfaring i økonomistyring og bestyrelsesarbejde i NGO’er."
         />
       </div>
-    </div>
-    <div class="border-t-accent-red border-t">
-      <Heading
-        htmlheading="h2"
-        size="medium"
-        stylingclasses="uppercase text-dark pt-3xl pb-xl"
-        >Bestyrelsesmedlemmer</Heading
-      >
-      <div class="grid md:grid-cols-4">
-        <Card
-          undertitle="Jannet Van der Veen"
-          text="Sekretariatsleder i Brugernes Akademi, med lang erfaring i brugerdrevet skadesreduktion og sundhedsindsatser for marginaliserede grupper."
-        />
-        <Card
-          undertitle="Jelena Seidel"
-          text="Formand i SIO, med over 25 års erfaring i sexarbejderrettigheder samt grundlægger og politisk konsulent i TRV."
-        />
-        <Card
-          undertitle="Rie Ljungmann"
-          text="Programleder i Røde Kors og tidligere sekretariatsleder i Antidote, med solid erfaring i frivillighed og ledelse i civilsamfundet."
-        />
-        <Card
-          undertitle="Yasmin Bahat"
-          text="Gadeplansmedarbejder i Projekt Udenfor og erfaren frivillig i TRV."
-        />
-        <Card
-          undertitle="Anna Berg"
-          text="konsulent i Beskæftigelses- og Integrationsforvaltningen i Københavns Kommune, med lang erfaring inden for politisk rådgivning og rettighedsarbejde."
-        />
-        <Card
-          undertitle="Maria Kloster Tolstrup"
-          text="Antropologistuderende og erfaren frivillig i TRV."
-        />
-        <Card undertitle="Mathilde Høyberg" text="Erfaren frivillig i TRV." />
+      <div class="border-t-accent-red border-t">
+        <Heading
+          htmlheading="h2"
+          size="medium"
+          stylingclasses="uppercase text-dark pt-3xl pb-xl"
+          >Bestyrelsesmedlemmer</Heading
+        >
+        <div class="grid md:grid-cols-4 md:gap-gutter">
+          <Card
+            undertitle="Jannet Van der Veen"
+            text="Sekretariatsleder i Brugernes Akademi, med lang erfaring i brugerdrevet skadesreduktion og sundhedsindsatser for marginaliserede grupper."
+          />
+          <Card
+            undertitle="Jelena Seidel"
+            text="Formand i SIO, med over 25 års erfaring i sexarbejderrettigheder samt grundlægger og politisk konsulent i TRV."
+          />
+          <Card
+            undertitle="Rie Ljungmann"
+            text="Programleder i Røde Kors og tidligere sekretariatsleder i Antidote, med solid erfaring i frivillighed og ledelse i civilsamfundet."
+          />
+          <Card
+            undertitle="Yasmin Bahat"
+            text="Gadeplansmedarbejder i Projekt Udenfor og erfaren frivillig i TRV."
+          />
+          <Card
+            undertitle="Anna Berg"
+            text="konsulent i Beskæftigelses- og Integrationsforvaltningen i Københavns Kommune, med lang erfaring inden for politisk rådgivning og rettighedsarbejde."
+          />
+          <Card
+            undertitle="Maria Kloster Tolstrup"
+            text="Antropologistuderende og erfaren frivillig i TRV."
+          />
+          <Card undertitle="Mathilde Høyberg" text="Erfaren frivillig i TRV." />
+        </div>
       </div>
     </div>
   </section>
