tilføjer spacing i footer og retter

--- a/src/pages/stoet.astro
+++ b/src/pages/stoet.astro
@@ -10,7 +10,7 @@ import TextParagraf from "../components/TextParagraf.astro";
 ---
 
 <MainLayout title="Støt">
-  <section class="bg-pink px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
+  <section class="bg-pink px-gutter py-3xl md:px-2xl md:py-4xl">
     <HeadingParagraf
       title="Støt vores arbejde"
       text="Når du støtter vores arbejde er du med til at sikre rettigheder, sikkerhed og værdighed for gadebaserede sexarbejdere!"
