--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 ---
 
-<section class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3">
+<section
+  class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:py-4xl gap-2xl"
+>
   <div class="md:col-start-2 md:col-end-3">
     <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
       Organisation
