--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -69,6 +69,68 @@ import Heading from "../components/Heading.astro";
     </TextParagraf>
   </section>
   <section class="bg-pink px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-5xl">
-    <h1>form her</h1>
+    <Heading htmlheading="h3" size="medium" stylingclasses="uppercase text-dark"
+      >Send en ansøgning!</Heading
+    >
+    <form>
+      <div>
+        <label for="fulde navn">Fulde navn</label>
+        <br />
+        <input type="text" id="Fulde navn" placeholder="Dit navn" />
+      </div>
+
+      <div>
+        <label for="pronominer">Pronominer</label><br />
+        <input type="checkbox" />
+        <label for="Hun/hende">Hun/hende</label>
+        <br />
+        <input type="checkbox" />
+        <label for="Han/ham">Han/ham</label>
+        <br />
+        <input type="checkbox" />
+        <label for="De/dem">De/dem</label>
+        <br />
+      </div>
+
+      <div>
+        <label for="navn">Navn</label>
+        <input type="”text”" id="navn" placeholder="Holly" /><br />
+      </div>
+
+      <div>
+        <label for="adresse">Adresse</label>
+        <input type="”text”" id="adresse" placeholder="Pollyvej" /><br />
+      </div>
+
+      <div>
+        <label for="email">E-mail</label>
+        <input
+          type="”email”"
+          id="email"
+          placeholder="hollypaapollyvej@live.dk"
+        /><br />
+      </div>
+
+      <div>
+        <label for="postnummer">Postnummer</label>
+        <input type="”text”" id="postnummer" placeholder="0420" /><br />
+      </div>
+
+      <div>
+        <label for="bynavn">Bynavn</label>
+        <input type="”text”" id="bynavn" placeholder="Pollyby" /><br />
+      </div>
+
+      <div>
+        <label for="mobil">Mobil</label>
+        <input type="”tel”" id="mobil" placeholder="23322332" /><br />
+      </div>
+
+      <div>
+        <label for="ja">Ja tak til nyhedsbreve</label>
+        <input type="checkbox" /><br />
+      </div>
+      <button type="”submit”">Indsend</button>
+    </form>
   </section>
 </MainLayout>
