--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Card from "../components/Card.astro";
 import List from "../components/List.astro";
+import Stoetform from "../components/Stoetform.astro";
 ---
 
 <MainLayout title="Forside">
@@ -38,7 +39,7 @@ import List from "../components/List.astro";
       <Button variant="light">Vores arbejde</Button>
     </div>
     <div>
-      <h1>form her</h1>
+      <Stoetform />
     </div>
     <div>
       <div>
