--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,26 +7,26 @@ import Text from "../components/Text.astro";
   class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:py-4xl gap-2xl"
 >
   <div class="md:col-start-2 md:col-end-3">
-    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
       Organisation
     </Heading>
-    <Text teksttype="brødtekst" stylingclasses="text-hf">
+    <Text teksttype="base" stylingclasses="text-hf">
       Vedtægter <br />Regnskaber <br />Privatliv & cookies
     </Text>
   </div>
   <div class="md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3">
-    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
       Sociale medier
     </Heading>
-    <Text teksttype="brødtekst" stylingclasses="text-hf"
+    <Text teksttype="base" stylingclasses="text-hf"
       >Instagram <br />Facebook</Text
     >
   </div>
   <div class="md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3">
-    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
       Kontakt os
     </Heading>
-    <Text teksttype="brødtekst" stylingclasses="text-hf">
+    <Text teksttype="base" stylingclasses="text-hf">
       Vesterbrogade 112B <br />1620 Vesterbro <br />København V
       <br /><br />info@trv.dk
       <br /><br />+45 93919278
