--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,9 +1,9 @@
 ---
 const {
-  htmlheading = "large",
+  htmlheading = "",
   size = "medium",
   font = undefined,
-  stylingclasses = "",
+  stylingclasses = "text-dark",
 } = Astro.props;
 const Htmlheading = htmlheading;
 
