--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -1,5 +1,5 @@
 ---
-const { teksttype = "base", stylingclasses = "" } = Astro.props;
+const { teksttype = "base", stylingclasses = "text-dark" } = Astro.props;
 
 const sizeClasses = {
   base: "text-base font-regular",
