--- a/src/pages/historien.astro
+++ b/src/pages/historien.astro
@@ -22,7 +22,7 @@ import Heading from "../components/Heading.astro";
     </div>
 
     <TextParagraf title="2016 Sexelancen opstår" textCols={2}>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         The Red Van startede som projektet Sexelancen, lanceret i samarbejde med
         SIO (Sexarbejdernes Interesse Organisation). SIO havde i flere år
         arbejdet på Vesterbros gader for at forstå de problemstillinger og
@@ -34,10 +34,7 @@ import Heading from "../components/Heading.astro";
 
     <div class="grid md:grid-cols-3">
       <div class="md:col-start-2 md:col-end-4">
-        <Heading
-          htmlheading="h4"
-          size="xsmall"
-          stylingclasses="text-dark pt-3xl"
+        <Heading htmlheading="h4" size="xsmall" stylingclasses="pt-3xl"
           >“I begyndelsen var vi usikre på, om nogen ville bruge vognen. Men
           fordi vi selv var sexarbejdere og til stede på gaden, opbyggede vi
           hurtigt tillid. Tilbuddet er stadig uformelt og anonymt – vi kræver
@@ -60,7 +57,7 @@ import Heading from "../components/Heading.astro";
     </div>
 
     <TextParagraf title="2018 – 2025 Foreningen the red van" textCols={2}>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         I 2018 blev Sexelancen pensioneret og erstattet af en rød varevogn.
         Samtidig blev den selvstændige forening The Red Van stiftet. <br /><br
         />I 2023 opnåede The Red Van en vigtig milepæl, da vi modtog vores
@@ -68,7 +65,7 @@ import Heading from "../components/Heading.astro";
         finansiering har gjort det muligt for os at udvide vores aktiviteter og
         forbedre vores tilbud til sexarbejderne.
       </Text>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         I 2024 kunne The Red Van etablere sit første sekretariat, hvilket
         markerede endnu et skridt i vores udvikling som organisation. Med et
         dedikeret fællesskab og øgede ressourcer er vi nu bedre rustet end
