--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -27,8 +27,7 @@ import Text from "../components/Text.astro";
     <Heading
       htmlheading="h2"
       size="large"
-      stylingclasses="uppercase text-dark pt-4xl md:pb-lg"
-      >Sekretariatet</Heading
+      stylingclasses="uppercase pt-4xl md:pb-lg">Sekretariatet</Heading
     >
     <div class="grid md:grid-cols-4 gap-gutter">
       <Card
@@ -57,7 +56,7 @@ import Text from "../components/Text.astro";
   </section>
   <section class="bg-pink px-gutter py-3xl md:px-2xl md:py-4xl">
     <TextParagraf title="Vores bestyrelse" textCols={1}>
-      <Text teksttype="brødtekstmedium" stylingclasses="text-dark">
+      <Text>
         Vi tror på, at den bedste retning for organisationen findes i samspillet
         mellem dem, der har hænderne i arbejdet, og dem, der bidrager med
         perspektiver, netværk og specialiseret viden udefra. Vores bestyrelse
@@ -69,7 +68,7 @@ import Text from "../components/Text.astro";
     <div class="grid md:grid-cols-3">
       <div class="md:col-start-2 md:col-end-4 py-3xl">
         <img src="placeholder.webp" alt="" />
-        <Text teksttype="brødtekstmedium" stylingclasses="text-dark">
+        <Text teksttype="basemedium">
           Fra venstre: Mathilde Høyberg, Nadir Kadhim Hamza, Jelena Seidel,
           Jannet Van der Veen, Henrik Olsen, Rie Ljungmann, Yasmin Bahat, Maria
           Kloster Tolstrup, Anna Berg, Milena Bascuñan Skaarup
@@ -80,7 +79,7 @@ import Text from "../components/Text.astro";
       <Heading
         htmlheading="h2"
         size="medium"
-        stylingclasses="uppercase text-dark pt-3xl pb-xl">Ledelsen</Heading
+        stylingclasses="uppercase pt-3xl pb-xl">Ledelsen</Heading
       >
       <div class="grid md:grid-cols-4 md:gap-gutter">
         <Card
@@ -103,8 +102,7 @@ import Text from "../components/Text.astro";
         <Heading
           htmlheading="h2"
           size="medium"
-          stylingclasses="uppercase text-dark pt-3xl pb-xl"
-          >Bestyrelsesmedlemmer</Heading
+          stylingclasses="uppercase pt-3xl pb-xl">Bestyrelsesmedlemmer</Heading
         >
         <div class="grid md:grid-cols-4 md:gap-gutter">
           <Card
@@ -138,7 +136,7 @@ import Text from "../components/Text.astro";
   </section>
   <section class="bg-green px-gutter py-3xl md:px-2xl md:py-4xl">
     <TextParagraf title="Vores retningslinjer for bestyrelsen" textCols={2}>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         The Red Van ledes af en frivillig og ulønnet bestyrelse, som har det
         overordnede ansvar for foreningens strategi og udvikling. Bestyrelsen
         vælges demokratisk af de stemmeberettigede frivillige på
@@ -151,7 +149,7 @@ import Text from "../components/Text.astro";
         arbejde med fokus på at varetage de frivilliges perspektiver – dog uden
         stemmeret. <br /><br />
       </Text>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         Bestyrelsesmedlemmer vælges for en toårig periode med forskudte valg, så
         der sikres kontinuitet. Inden valget fastsætter generalforsamlingen,
         hvor mange medlemmer der skal vælges. Kandidater kan stille op via to
