--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,20 +17,16 @@ import Stoetform from "../components/Stoetform.astro";
       alt="Billede af kvinde i The Red Van"
       class="py-2xl place-self-center"
     />
-    <Heading htmlheading="h5" size="xsmall" stylingclasses="text-hero">
+    <Heading htmlheading="h2" size="xsmall" stylingclasses="text-hero">
       Vi støtter sexarbejdere i deres ret til et trygt og værdigt arbejdsliv.
     </Heading>
   </section>
   <section class="bg-pink px-gutter py-2xl grid md:grid-cols-2 md:px-2xl">
     <div>
-      <Heading
-        htmlheading="h1"
-        size="xlarge"
-        stylingclasses="uppercase text-dark pb-md"
-      >
+      <Heading htmlheading="h1" size="xlarge" stylingclasses="uppercase pb-md">
         Støt vores mission
       </Heading>
-      <Heading htmlheading="h5" size="xsmall" stylingclasses="text-dark pb-xl">
+      <Heading htmlheading="h2" size="xsmall" stylingclasses="pb-xl">
         The Red Vans mission er at sikre bedre vilkår for gadebaserede
         sexarbejdere. Med vores ombyggede varevogn tilbyder vi et tryggere, mere
         hygiejnisk og værdigt arbejdsmiljø end gaden. Vi arbejder
@@ -43,11 +39,7 @@ import Stoetform from "../components/Stoetform.astro";
     </div>
     <div>
       <div>
-        <Heading
-          htmlheading="h2"
-          size="large"
-          stylingclasses="uppercase text-dark"
-        >
+        <Heading htmlheading="h2" size="large" stylingclasses="uppercase">
           Det går din donation til</Heading
         >
       </div>
@@ -66,12 +58,12 @@ import Stoetform from "../components/Stoetform.astro";
     </div>
     <div>
       <Heading
-        htmlheading="h3"
+        htmlheading="h2"
         size="medium"
         stylingclasses="uppercase text-light pt-xl pb-md md:pt-0"
         >Vil du være med til at gøre en forskel?</Heading
       >
-      <Text teksttype="brødtekst" stylingclasses="text-light pb-xl">
+      <Text stylingclasses="text-light pb-xl">
         Nattevagterne er hjertet i The Red Vans arbejde, og det er frivillige,
         der gør det muligt for os at holde vanen åben. Som frivillig på
         nattevagt får du mulighed for at gøre en konkret forskel for
@@ -86,7 +78,7 @@ import Stoetform from "../components/Stoetform.astro";
     <Heading
       htmlheading="h2"
       size="xlarge"
-      stylingclasses="uppercase text-dark pb-xl md:pb-2xl"
+      stylingclasses="uppercase pb-xl md:pb-2xl"
       >Vores tre kerneværdier:</Heading
     >
     <div class="grid md:grid-cols-3 md:grid-rows-3 pb-3xl md:gap-gutter">
@@ -113,7 +105,7 @@ import Stoetform from "../components/Stoetform.astro";
         <img src="foredrag.webp" alt="Billede af foredragsholdere" />
       </div>
       <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
-        <Text teksttype="brødtekstmedium" stylingclasses="text-dark pb-xl">
+        <Text teksttype="basemedium" stylingclasses=" pb-xl">
           Vi elsker at fortælle om vores organisation og det vi står for. Derfor
           holder vi workshops og talks, hvor vi enten kommer ud, eller viser
           rundt i vores vans.
@@ -123,13 +115,11 @@ import Stoetform from "../components/Stoetform.astro";
     </div>
   </section>
   <section class="bg-pink px-gutter py-3xl md:px-2xl">
-    <Heading
-      htmlheading="h2"
-      size="xlarge"
-      stylingclasses="uppercase text-dark pb-md">Artikler</Heading
+    <Heading htmlheading="h2" size="xlarge" stylingclasses="uppercase  pb-md"
+      >Artikler</Heading
     >
     <div class="grid md:grid-cols-2 md:pb-5xl">
-      <Heading htmlheading="h3" size="xsmall" stylingclasses="text-dark pb-6xl">
+      <Heading htmlheading="h3" size="xsmall" stylingclasses=" pb-6xl">
         Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og
         beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe
         opmærksomhed omkring deres vilkår.
