--- a/src/pages/stoet.astro
+++ b/src/pages/stoet.astro
@@ -16,7 +16,7 @@ import TextParagraf from "../components/TextParagraf.astro";
       text="Når du støtter vores arbejde er du med til at sikre rettigheder, sikkerhed og værdighed for gadebaserede sexarbejdere!"
     />
     <section class="grid md:grid-cols-2 md:pt-5xl">
-      <Text teksttype="brødtekstmedium" stylingclasses="text-dark pb-6xl">
+      <Text teksttype="basemedium" stylingclasses=" pb-6xl">
         Din støtte gør en konkret forskel: Den hjælper os at stille vores røde
         varevogn til rådighed, som gadebaserede sexarbejdere kan bruge med sine
         kunder, under tryggere, mere hygiejniske og værdige forhold end gaden
@@ -37,7 +37,7 @@ import TextParagraf from "../components/TextParagraf.astro";
     <Heading
       htmlheading="h2"
       size="xlarge"
-      stylingclasses="uppercase text-dark pb-xl md:pb-2xl"
+      stylingclasses="uppercase pb-xl md:pb-2xl"
       >Tre gode grunde til at donere</Heading
     >
     <div class="grid md:grid-cols-3 pb-3xl md:pb-4xl md:gap-gutter">
