--- a/src/pages/vores-arbejde.astro
+++ b/src/pages/vores-arbejde.astro
@@ -21,7 +21,7 @@ import Text from "../components/Text.astro";
       />
     </div>
     <TextParagraf title="Mere tryghed på gaden" textCols={2}>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         Gadebaserede sexarbejdere arbejder under usikre forhold uden klare
         rettigheder. Lovgivningen, særligt rufferiparagraffen, forhindrer
         sexarbejdere i at organisere sig, og tvinger mange til at alliere sig
@@ -30,7 +30,7 @@ import Text from "../components/Text.astro";
         fra princippet om skadesreduktion. Det betyder, at vi forsøger at begrænse
         den skade, som gadebaserede sexarbejdere risikerer at blive udsat for.
       </Text>
-      <Text teksttype="brødtekst" stylingclasses="text-dark">
+      <Text>
         Hver weekend stiller vi en rød, ombygget varevogn til rådighed, som
         sexarbejderne kan bruge med deres kunder. <br />
         Det sikrer tryggere, mere hygiejniske og værdige forhold end gaden ellers
@@ -49,7 +49,7 @@ import Text from "../components/Text.astro";
   </section>
 
   <section class="bg-blue px-gutter py-3xl md:px-2xl md:py-4xl">
-    <Heading htmlheading="h2" size="xsmall" stylingclasses="text-dark pb-2xl">
+    <Heading htmlheading="h2" size="xsmall" stylingclasses=" pb-2xl">
       Udover at facilitere vores skadesreducerende <br />gadeindsats laver vi
       også andre vigtige ting som…
     </Heading>
