--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -8,13 +8,10 @@ import Heading from "../components/Heading.astro";
 
 <MainLayout title="Bliv frivillig">
   <section class="bg-green px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
-    <TextParagraf title="Bliv frivillig" textCols={1}>
-      <Heading htmlheading="h2" size="xsmall" stylingclasses="text-dark">
-        The Red Van er et fællesskab drevet af hovedsageligt frivillige. Uden
-        frivillige, ingen Red Van. Derfor er vi altid nysgerrige på at høre fra
-        dig, hvis du er nysgerrig på os.
-      </Heading>
-    </TextParagraf>
+    <HeadingParagraf
+      title="Bliv frivillig"
+      text="The Red Van er et fællesskab drevet af hovedsageligt frivillige. Uden frivillige, ingen Red Van. Derfor er vi altid nysgerrige på at høre fra dig, hvis du er nysgerrig på os."
+    />
 
     <div class="grid md:grid-cols-3">
       <img
@@ -43,7 +40,7 @@ import Heading from "../components/Heading.astro";
 
     <div class="grid md:grid-cols-3 py-3xl">
       <div class="md:col-start-2 md:col-end-4">
-        <Heading htmlheading="h4" size="xsmall" stylingclasses="text-dark"
+        <Heading htmlheading="h4" size="xsmall"
           >“At være frivillig for The Red Van er utroligt givende. Jeg føler, at
           jeg gør en stor forskel for vanens brugere. Nattevagterne skaber
           tryghed på gaden for sexarbejderne.”</Heading
@@ -69,7 +66,7 @@ import Heading from "../components/Heading.astro";
     </TextParagraf>
   </section>
   <section class="bg-pink px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-5xl">
-    <Heading htmlheading="h3" size="medium" stylingclasses="uppercase text-dark"
+    <Heading htmlheading="h2" size="medium" stylingclasses="uppercase"
       >Send en ansøgning!</Heading
     >
     <form>
