færdiggører formular på index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Stoetform from "../components/Stoetform.astro";
       </Heading>
       <Button variant="light">Vores arbejde</Button>
     </div>
-    <div>
+    <div class="mx-auto py-3xl">
       <Stoetform />
     </div>
     <div>
