--- a/src/components/Stoetform.astro
+++ b/src/components/Stoetform.astro
@@ -6,7 +6,7 @@ import Button from "./Button.astro";
 <form x-data="{ step: 1 }">
   <div
     x-data="{ active: 'fast' }"
-    class="relative flex w-96.75 rounded-full btn-light p-2"
+    class="relative flex w-88.25 lg:w-96.75 rounded-full btn-light p-2"
   >
     <!-- SLIDER -->
     <div
@@ -102,7 +102,7 @@ import Button from "./Button.astro";
     </div>
 
     <!-- INDTAST SELV BELØB -->
-    <div class="flex flex-col w-96.75 pb-xl">
+    <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
       <label for="selvvalgt"
         ><Text teksttype="formtekst" stylingclasses="text-dark text-base pb-xs"
           >Vælg selv et beløb:</Text
@@ -117,7 +117,7 @@ import Button from "./Button.astro";
     </div>
 
     <!-- NÆSTE TRIN KNAP -->
-    <div class="flex flex-end">
+    <div class="flex justify-end">
       <Button @click="step = step + 1" variant="light" type="button"
         >Næste trin</Button
       >
@@ -150,7 +150,7 @@ import Button from "./Button.astro";
         >
       </label>
 
-      <!-- Kort -->
+      <!-- Dankort -->
       <label class="flex items-center gap-5 cursor-pointer">
         <input
           type="radio"
@@ -170,22 +170,22 @@ import Button from "./Button.astro";
     </div>
 
     <!-- Fulde navn -->
-    <div class="flex flex-col w-96.75 pb-xl">
+    <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
       <label for="selvvalgt"
         ><Text teksttype="formtekst" stylingclasses="text-dark text-base pb-xs"
-          >Fulde navn:</Text
+          >Fulde navn</Text
         ></label
       >
       <input type="text" id="navn" name="navn" class="rounded-xs border-0" />
     </div>
 
-    <div>
+    <div class="flex flex-row gap-5">
       <!-- e-mail -->
-      <div class="flex flex-col w-96.75 pb-xl">
+      <div class="flex flex-col w-41.25 lg:w-46 pb-xl">
         <label for="email"
           ><Text
             teksttype="formtekst"
-            stylingclasses="text-dark text-base pb-xs">E-mail:</Text
+            stylingclasses="text-dark text-base pb-xs">E-mail</Text
           ></label
         >
         <input
@@ -196,7 +196,39 @@ import Button from "./Button.astro";
         />
       </div>
 
+      <!-- mobilnummer -->
+      <div class="flex flex-col w-41.25 lg:w-46">
+        <label for="mobilnummer"
+          ><Text
+            teksttype="formtekst"
+            stylingclasses="text-dark text-base pb-xs">Mobilnummer</Text
+          ></label
+        >
+        <input type="tel" id="tel" name="tel" class="rounded-xs border-0" />
+      </div>
+    </div>
+
+    <!-- checkbox -->
+    <div class="flex flex-row gap-4 pb-xl">
+      <input
+        type="checkbox"
+        id="handelsbetingelser"
+        name="handelsbetingelser"
+        class="appearance-none
+         w-6.75 h-6.75
+         bg-tertiary-darkpink
+         checked:bg-dark border-0 focus:outline-none
+      focus:ring-0"
+      />
+      <label for="handelsbetingelser"
+        ><Text>Accepter handelsbetingelser</Text></label
+      >
+    </div>
+
+    <!-- KNAPPER -->
+    <div class="flex justify-end gap-md">
       <Button type="button" @click="step = 1" variant="light">Tilbage</Button>
+      <Button variant="dark">Støt os</Button>
     </div>
   </div>
 </form>
